Update tmux config to update theme styles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,8 @@ bind-key k select-pane -U
 bind-key j select-pane -D
 
 set -g @plugin 'rose-pine/tmux'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @rose_pine_variant 'dawn'
@@ -27,9 +29,32 @@ set -g @rose_pine_bar_bg_disable 'on'
 set -g @rose_pine_bar_bg_disabled_color_option 'default'
 set -g @rose_pine_default_window_behavior 'on'
 
+set -g @rose_pine_only_windows 'off' # Leaves only the window module, for max focus and space
+set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
+
+set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
+set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
+set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current directory as window name
+# Previously set -g @rose_pine_window_tabs_enabled
+
 set -g @rose_pine_left_separator '  ' # The strings to use as separators are 1-space padded
 set -g @rose_pine_right_separator ' 󱗽 ' # Accepts both normal chars & nerdfont icons
 set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
 set -g @rose_pine_window_separator '  ' # Replaces the default `:` between the window number and name
+
+set -g @rose_pine_status_right_prepend_section '#{tmux_mode_indicator} '
+
+
+set -g @mode_indicator_copy_prompt ' COPY '
+set -g @mode_indicator_copy_mode_style 'bg=default,fg=black'
+
+set -g @mode_indicator_sync_prompt ' SYNC '
+set -g @mode_indicator_sync_mode_style 'bg=default,fg=black'
+
+set -g @mode_indicator_empty_prompt '  '
+set -g @mode_indicator_empty_mode_style 'bg=default,fg=#CB9000'
+
+set -g @mode_indicator_prefix_prompt '  '
+set -g @mode_indicator_prefix_mode_style 'bg=default,fg=#325CC0'
 
 run '/opt/homebrew/opt/tpm/share/tpm/tpm'
