--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,6 +17,9 @@ bind-key l select-pane -R
 bind-key k select-pane -U
 bind-key j select-pane -D
 
+unbind %
+bind | split-window -h
+
 set -g @plugin 'rose-pine/tmux'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
