--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,17 +1,33 @@
+# ---------------------
+# General
+# ---------------------
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-# Add alias to reload tmux config
+# Set the prefix to C-s
+set -g prefix C-s
+
+# Enable mouse support
+set -g mouse on
+
+set -g base-index 1
+set -g detach-on-destroy off
+set -g escape-time 0
+set -g history-limit 1000000
+set -g renumber-windows on
+set -g set-clipboard on
+set -g status-position top
+set -g default-terminal "${TERM}"
+setw -g mode-keys vi
+
+# ---------------------
+# Key Bindings
+# ---------------------
+
+# Reload tmux config
 unbind r
 bind r source-file ~/.tmux.conf
 
-# Change prefix to Ctrl + S
-set -g prefix C-s
-
-# Enable mouse resize
-set -g mouse on
-
-# Set HJKL to navigate
 bind-key h select-pane -L
 bind-key l select-pane -R
 bind-key k select-pane -U
@@ -19,45 +35,50 @@ bind-key j select-pane -D
 
 unbind %
 bind | split-window -h
+bind '"' split-window -v
 
-set -g @plugin 'rose-pine/tmux'
+# ---------------------
+# Plugins
+# ---------------------
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g @rose_pine_variant 'dawn'
-set -g @rose_pine_host 'off'
-set -g @rose_pine_user 'on'
-set -g @rose_pine_bar_bg_disable 'on'
-set -g @rose_pine_bar_bg_disabled_color_option 'default'
-set -g @rose_pine_default_window_behavior 'on'
+set -g @catppuccin_status_background "default"
 
-set -g @rose_pine_only_windows 'off' # Leaves only the window module, for max focus and space
-set -g @rose_pine_disable_active_window_menu 'on' # Disables the menu that shows the active window on the left
+set -g @catppuccin_flavour 'frappe'
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
 
-set -g @rose_pine_default_window_behavior 'on' # Forces tmux default window list behaviour
-set -g @rose_pine_show_current_program 'on' # Forces tmux to show the current running program as window name
-set -g @rose_pine_show_pane_directory 'on' # Forces tmux to show the current directory as window name
-# Previously set -g @rose_pine_window_tabs_enabled
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
 
-set -g @rose_pine_left_separator '  ' # The strings to use as separators are 1-space padded
-set -g @rose_pine_right_separator ' 󱗽 ' # Accepts both normal chars & nerdfont icons
-set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
-set -g @rose_pine_window_separator '  ' # Replaces the default `:` between the window number and name
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
 
-set -g @rose_pine_status_right_prepend_section '#{tmux_mode_indicator} '
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
 
+set -g @catppuccin_status_modules_right "user session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
 
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+# Mode Indicator
 set -g @mode_indicator_copy_prompt ' COPY '
 set -g @mode_indicator_copy_mode_style 'bg=default,fg=black'
-
 set -g @mode_indicator_sync_prompt ' SYNC '
 set -g @mode_indicator_sync_mode_style 'bg=default,fg=black'
-
 set -g @mode_indicator_empty_prompt '  '
 set -g @mode_indicator_empty_mode_style 'bg=default,fg=#CB9000'
-
 set -g @mode_indicator_prefix_prompt '  '
 set -g @mode_indicator_prefix_mode_style 'bg=default,fg=#325CC0'
 
+# Run tmux plugin manager
 run '/opt/homebrew/opt/tpm/share/tpm/tpm'
