chore: Update tmux configuration for status bar and theme
- Move status bar to the bottom for better visibility.
- Simplify theme configuration by consolidating settings.
- Enhance status bar with additional information like CPU and uptime.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,7 +16,7 @@ set -g escape-time 0
 set -g history-limit 1000000
 set -g renumber-windows on
 set -g set-clipboard on
-set -g status-position top
+set -g status-position bottom
 set -g default-terminal "${TERM}"
 setw -g mode-keys vi
 
@@ -41,44 +41,21 @@ bind '"' split-window -v
 # Plugins
 # ---------------------
 set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'MunifTanjim/tmux-mode-indicator'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tpm'
 
-set -g @catppuccin_status_background "default"
+# Theme Configuration
+set -g @catppuccin_flavor "frappe"
+set -g @catppuccin_window_status_style "rounded"
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
 
-set -g @catppuccin_flavour 'frappe'
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "user session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
-# Mode Indicator
-set -g @mode_indicator_copy_prompt ' COPY '
-set -g @mode_indicator_copy_mode_style 'bg=default,fg=black'
-set -g @mode_indicator_sync_prompt ' SYNC '
-set -g @mode_indicator_sync_mode_style 'bg=default,fg=black'
-set -g @mode_indicator_empty_prompt '  '
-set -g @mode_indicator_empty_mode_style 'bg=default,fg=#CB9000'
-set -g @mode_indicator_prefix_prompt '  '
-set -g @mode_indicator_prefix_mode_style 'bg=default,fg=#325CC0'
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # Run tmux plugin manager
 run '/opt/homebrew/opt/tpm/share/tpm/tpm'
