chore(ghostty): update font and theme settings
- **what was changed:** set font-family to "google sans mono";
  change theme to light:adwaita and dark:adwaita dark; reduce
  adjust-cell-height from 32% to 8%; add cursor-color and cursor-style;
  enable background-blur and background-opacity; enable link-url and
  fullscreen
- **why it was changed:** improve visual consistency and readability
  across themes and enable convenient UI features like link navigation
  and fullscreen
- **how it affects the project:** apply updated appearance and behavior
  to ghostty sessions; no breaking config changes expected

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,4 +1,4 @@
-font-family = "Monaspace Argon Var"
+font-family = "Google Sans Mono"
 font-feature = ss01
 font-feature = ss02
 font-feature = ss03
@@ -11,8 +11,16 @@ font-feature = ss09
 font-size = 16
 
 # Theme
-theme = "catppuccin-mocha"
-adjust-cell-height = 32%
+theme = light:Adwaita, dark:Adwaita Dark
+adjust-cell-height =  8%
+cursor-color = #000000
+cursor-style = block
+background-blur = true
+background-opacity = 0.9
+
 
 # Keybind
 copy-on-select = clipboard
+
+link-url = true
+fullscreen = true
